...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/create_your_own_recipe" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_own_recipes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_own_recipes"
        tools:listitem="@layout/recipe_item" />

    <ImageButton
        android:id="@+id/create_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_add_button"
        app:layout_constraintBottom_toBottomOf="parent"
...
